# OPUS_CODEC

./: .gitmodules  Dockerfile  Results and Comment.docx  convert_mix.ipynb  matlabspectrum.m  midi_generate.py
encoded_opus/: recorded_sieuvip_BWFB_BR128000_VBR1.opus  recorded_sieuvip_BWFB_BR16000_VBR1.opus  recorded_sieuvip_BWFB_BR32000_VBR0.opus  recorded_sieuvip_BWFB_BR64000_VBR1.opus  recorded_sieuvip_BWMB_BR16000_VBR1.opus  recorded_sieuvip_BWMB_BR32000_VBR0.opus  recorded_sieuvip_BWMB_BR64000_VBR1.opus  recorded_sieuvip_BWNB_BR128000_VBR1.opus  recorded_sieuvip_BWNB_BR16000_VBR1.opus  recorded_sieuvip_BWNB_BR32000_VBR0.opus  recorded_sieuvip_BWNB_BR64000_VBR1.opus  recorded_sieuvip_BWNB_BR8000_VBR1.opus  (+7 more)
libogg-1.3.5/: Makefile  libtool  (+2 more)
opusfile-0.11/: CMakeLists.txt  Makefile  config.h  config.status  decoder.c  libopusfile.la  libopusurl.la  libtool  opusfile-uninstalled.pc  opusurl-uninstalled.pc
opusfile-0.11/.libs/: libopusfile.lai  libopusurl.so.0.4.4
opusfile-0.11/doc/: Doxyfile
opusfile-0.11/examples/: opusfile_example  seeking_example
opusfile-0.11/examples/.deps/: opusfile_example.Po  seeking_example.Po
opusfile-0.11/examples/.libs/: opusfile_example  seeking_example
opusfile-0.11/lib/: libopusfile.so.0.4.4  libopusurl.la  libopusurl.so.0.4.4
opusfile-0.11/lib/pkgconfig/: opusfile.pc  opusurl.pc
opusfile-0.11/src/: info.lo  internal.lo  libopusurl_la-http.lo  libopusurl_la-internal.lo  opusfile.lo  stream.lo
opusfile-0.11/src/.deps/: info.Plo  internal.Plo  libopusurl_la-http.Plo  libopusurl_la-internal.Plo  opusfile.Plo  stream.Plo
(+7 files in other folders)
